# editorconfig-qtcreator

./: .editorconfig  .gitignore  CMakeLists.txt  CPack.description.txt  EditorConfig.json.in  Editorconfig.json.in  README.md  editorconfig.pro  editorconfig_de.ts  editorconfig_global.h  editorconfigconstants.h  editorconfigdata.cpp  editorconfigdata.h  editorconfiglogging.cpp  editorconfiglogging.h  editorconfigpage.ui  editorconfigplugin.cpp  editorconfigplugin.h  editorconfigwizard.h  editorconfigwizarddialog.h  editorconfigwizardpage.cpp  editorconfigwizardpage.h
src/: editorconfig_global.h  editorconfigdata.h  editorconfiglogging.cpp  editorconfiglogging.h  editorconfigpage.ui  editorconfigplugin.cpp  editorconfigplugin.h  editorconfigwizard.cpp  editorconfigwizard.h  editorconfigwizarddialog.cpp  editorconfigwizardpage.h
translations/: editorconfig_de.ts  editorconfig_it.ts
